objects/Quote.object
<CustomObject>
    <fields>
        <fullName>DB_Days__c</fullName>
        <label>DB Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.ImageServer?id=015Hr000003iK9x&amp;oid=&quot;+$Organization.Id, &quot;Logo&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rebate Program</label>
        <referenceTo>RebateProgram</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <defaultValue>&quot;Standard Terms and Conditions&quot;
&amp;BR()&amp;
&quot;1. The sale of the goods referred to on the face of this document (the goods) is subject to the following terms and conditions. Any inconsistent terms in Buyer&apos;s order or confirmation will not be binding on Seller. Any inconsistent terms in Specific Provisions of Sale in our quotation or proposal document will supersede the relevant term in this document.&quot;&amp;br()&amp;
&quot;2. These terms and conditions may not be varied or added to or this Agreement terminated except in writing. No variation, addition, termination or waiver of any term or condition shall be binding on Seller unless in writing signed by Seller&apos;s duly authorised representative.&quot;&amp;br()&amp;
&quot;3. Unless otherwise provided, prices include freight, transportation, insurance, shipping, packing, storage and handling. In the case of overseas sales, unless otherwise stated all prices are expressed in Australian dollars and for goods free on board (FOB). The Buyer is responsible for all shipping, handling, freight, transportation, storage and insurance charges.&quot;&amp;br()&amp;
&quot;4. Except as otherwise provided by law, all sales, excise and similar taxes or duties which Seller may be required to pay or collect with respect to the goods or their supply to Buyer shall be for the account of Buyer. Where Buyer claims exemption from duty or tax, Buyer shall furnish appropriate exemption certificate to Seller.&quot;&amp;br()&amp;
&quot;5. Seller shall not be responsible for delays in delivery or failure to deliver due to causes beyond Seller&apos;s control including but not limited to acts of God, war, mobilisation, civil commotion, riots, embargoes, orders or regulations of governments of any relevant jurisdiction, fires, floods, strikes, lockouts or other labour difficulties, shortages of or inability to obtain shipping space or transportation, or shortages of or unavailability of raw materials, components or parts. The Seller shall be obliged to deliver at the earliest possible time.&quot;&amp;br()&amp;
&quot;6. The Buyer may not cancel an order without giving at least 30 days prior written notice of its intention to do so. Where an order is cancelled the Buyer shall pay to the Seller as liquidated damages an amount equal to the cost of all work completed by the Seller to the date of cancellation which amount shall be determined by the Seller in its absolute and sole discretion. The Buyer shall not be entitled to cancel an order after the goods have been despatched from the Seller&apos;s factory. The Buyer shall not be entitled to cancel an order after the goods have been despatched from the Seller&apos;s factory. The Seller may in its absolute discretion accept goods returned and credit the Buyer&apos;s account accordingly. Any goods returned for credit are subject to a 15% handling and restocking charge, which the Seller may deduct from the Buyer&apos;s credit account.&quot;&amp;br()&amp;
&quot;7. Seller shall not be liable for minor or normal variations in tolerance, dimensions, weight or quality.&quot;&amp;br()&amp;
&quot;8. Seller shall not be liable for any error, omission or inaccuracy in drawings or specifications provided or approved by Buyer. Alterations to the size or physical properties of goods will not be accepted for orders which are in production or are completed. If the Seller incurs additional costs of expenses by reason of the instructions or information given by the Buyer being incorrect or due to lack or insufficiency of instructions or due to any variations or amendments to the Buyer&apos;s requirements for the goods then such additional cost will be added to the price and will be paid by the Buyer in accordance with these Conditions.&quot;</defaultValue>
        <label>Terms &amp; Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.STATUS</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <columns>LastModifiedBy</columns>
        <filterScope>Everything</filterScope>
        <label>All Quotes</label>
    </listViews>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>